<resources>
    <string name="app_name">BubbleWash</string>
    <string name="fName" />
    <string name="hintFirstName">First Name</string>
    <string name="lName" />
    <string name="hintLastName">Last Name</string>
    <string name="phone" />
    <string name="hintphone">Mobile Number</string>
    <string name="username" />
    <string name="hintusername">User Name</string>
    <string name="address" />
    <string name="hintAddress">Street Address</string>
    <string name="password" />
    <string name="hintPassword">Password</string>
    <string name="confirmPassword" />
    <string name="hintConfPassword">Confirm Password</string>
    <string name="btnRegister">REGISTER</string>
    <string name="btnAddCard">ADD CARD</string>

    <string name="txtLoginPage">Login</string>
    <string name="txtUserNameHint">Username</string>
    <string name="txtPasswordHint">Password</string>
    <string name="txtButtonSignIn">Sign In</string>
    <string name="txtButtonRegister">Register</string>
    <string name="txtForgotPassword"><a href="#">Forgot Password?</a></string>
    <string name="txtGoogleSignIn">Google Sign In</string>
    <string name="txtBookingTitle">Booking</string>
    <string name="addcardTitle">Bubble Wash</string>
    <string name="crdNumber" />
    <string name="hintCrdNumber">Card Number</string>
    <string name="expDate" />
    <string name="hintExpDate">MM/YY</string>
    <string name="cvv" />
    <string name="hintCvv">CVC</string>
    <string name="nameOnCard" />
    <string name="hintNameOnCard">Name</string>
    <string name="btnSubmitCard">ADD CARD</string>
    <string name="txtSaveCardDesc">Save my card details for faster payments.</string>

    //Track Activity
    <string name="txtTrackSummaryDate">2024-04-01 2:00 PM</string>
    <string name="txtTrackSummaryCost">Total Cost : 12.0 $</string>
    <string name="txtTrackSummaryWasherTime">Washer 10:00 AM</string>
    <string name="txtTrackSummaryDryerTime">Dryer 12:00 PM</string>
    <string name="txtChkBoxTrackConfirmOrder">Confirm</string>
    <string name="txtChkBoxTrackPickmOrder">Pick</string>
    <string name="txtTrackPickTime"></string>
    <string name="txtChkBoxTrackWashOrder">Wash</string>
    <string name="txtChkBoxTrackDryOrder">Dry</string>
    <string name="txtChkBoxTrackDeliverOrder">Deliver</string>
    <string name="txtTrackDeliverTime"></string>
    <string name="txtTitleRateOrder">How is your order</string>
    <string name="txtTxtBoxComment"></string>
    <string name="txtHintTrackComment">Add your comment here..</string>
    <string name="txtBtnRateSubmit">Submit</string>
    <string name="txtTitleCharts">Charts</string>
    <string name="txtTitleHistory">Usage History</string>
    <string name="btnTitleBack">Back</string>

    //Main Activity
    <string name="txtMainTitle">Booking</string>
    <string name="txtSelectDate">Date</string>
    <string name="chkWasher">Washer</string>
    <string name="chkDryer">Dryer</string>
    <string name="txtStartWasherTimeSlot">Select a time to start washer</string>
    <string name="txtStartDryerTimeSlot">Select a time to start dryer</string>
    <string name="btnReserve">Reserve</string>
    <string name="txtPickup">Request pickup</string>
    <string name="txtDeliver">Request Deliver</string>
    <string name="txtRemarks">Remarks</string>

    //Booking summary Activity
    <string name="txtBookingSummaryTitle">Booking Summary</string>
    <string name="txtBookingSummarySuccess">Congratulations! Your reservation has been successfully confirmed.</string>

    //My Account Activity
    <string name="txtHistoryHeaderDate">Date</string>
    <string name="txtHistoryHeaderCost">Cost ( $ )</string>
    <string name="txtCurrentBooking">Current Bookings</string>
    <string name="txtAdminHeader">Date</string>
    <string name="txtAdminHeaderMonth">Month</string>
    <string name="txtAdminHeaderPickDate">Pick Date</string>
    <string name="txtAdminHeaderPickTime">Pick Time</string>
    <string name="txtAdminHeaderStatus">Status</string>
    <string name="txtTitleMyAccount">My Account</string>
    <string name="txtLblMyAccountUsername">Username</string>
    <string name="btnTitleMyAccountUpdate">Update</string>
    <string name="btnManageBookingSignout">SIGNOUT</string>

    //About Us
    <string name="txtAboutUsTitle">About Us</string>
    <string name="txtAddress">700 Royal Ave, New Westminster \nBC V3M5Z5 \n(604) 527-5400</string>

    //Manage bookings
    <string name="changeBookingStatus">CHANGE STATUS</string>
    <string name="statusTitle">CHANGE STATUS</string>
</resources>