<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HistoryActivity">

    <Button
        android:id="@+id/btnBackFromCharts"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/btnTitleBack"
        app:icon="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewTitleHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtTitleHistory"
        android:textColor="@color/cobalt_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/listHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackFromCharts">

        <TextView
            android:id="@+id/txtViewHeaderDate"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/txtHistoryHeaderDate"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewHeaderCost"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/txtHistoryHeaderCost"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewPastBookings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listHeaderLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>